# mygw

./: .gitignore  pyproject.toml
data/selection/imagana/: selection_O3.npz
src/mygw/io/: paths.py  skymaps.py
tests/: test_gwtccache.py
